# rust-bashgenn

./: .gitpod.yml  Cargo.toml  README.md  test.bgn
.github/workflows/: rust.yml
src/: lib.rs  main.rs
