[package]
name = "rbgn"
version = "0.2.0"
edition = "2021"
authors = ["romw314"]
description = "A modern, cross-platform alternative to Bashgenn."
repository = "https://github.com/romw314/rust-bashgenn/"
rust-version = "1.75"
readme = "README.md"
license = "Unlicense"

[lib]
name = "rbgn"
path = "src/lib.rs"

[[bin]]
name = "rbgn"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.26", features = ["derive", "cargo"] }
linereader = "0.4.0"

[dev-dependencies]
anyhow = "1.0.95"
